--- a/c_code/e_jquery/css/src/ex_04_onepageScroll.css
+++ b/c_code/e_jquery/css/src/ex_04_onepageScroll.css
@@ -57,9 +57,27 @@ body{overflow-x: hidden;}
 .tab_content  .tab_con_01{ display: block;}
 
 #conBox_02{
-  width:100%; height:500px; 
+  width:100%; height:1200px; 
   padding-top:10rem; border-bottom:1px solid #07a; 
   background-color: #faa; margin-top: 2rem;}
+
+.title_tab_style{
+  width: 80%; height:700px; margin:auto; box-sizing: border-box;
+  border:1px solid #333; padding:1rem;}
+
+.title_tab_style dl {position: relative;
+  width: 100%; height: 100%; background-color:rgba(255,255,255,0.7);}
+.title_tab_style dt { 
+  float:left; width:250px; height:40px; margin-left:0.1rem;
+  line-height:40px; text-transform:uppercase; text-indent:1rem; background-color: #ccc;}
+.title_tab_style dt:first-of-type{margin-left: 0;}
+.title_tab_style dt.action{background-color: #039; color:#fff; font-weight: bold;}
+.title_tab_style dt > a {display: block; width: 100%; height: 100%; font-size:1.3rem;}
+
+.title_tab_style dd { 
+  display: none; position: absolute; top:50px; left: 0;
+  width: 100%; height:auto; min-height:400px; background-color: #fdc; }
+.title_tab_style dd:nth-of-type(1) { display: block;}
 
 .top_move_btn { 
   position: fixed; right: 1rem; bottom: 3rem;
