--- a/c_code/e_jquery/css/src/ex_04_onepageScroll.css
+++ b/c_code/e_jquery/css/src/ex_04_onepageScroll.css
@@ -66,7 +66,7 @@ body{overflow-x: hidden;}
   border:1px solid #333; padding:1rem;}
 
 .title_tab_style dl {position: relative;
-  width: 100%; height: 100%; background-color:rgba(255,255,255,0.7);}
+  width: 100%; min-width:60rem; height: 100%; background-color:rgba(255,255,255,0.7);}
 .title_tab_style dt { 
   float:left; width:250px; height:40px; margin-left:0.1rem;
   line-height:40px; text-transform:uppercase; text-indent:1rem; background-color: #ccc;}
@@ -76,7 +76,7 @@ body{overflow-x: hidden;}
 
 .title_tab_style dd { 
   display: none; position: absolute; top:50px; left: 0;
-  width: 100%; height:auto; min-height:400px; background-color: #fdc; }
+  width: 100%; height:auto; min-height:400px; background-color: #fff; }
 .title_tab_style dd:nth-of-type(1) { display: block;}
 
 .top_move_btn { 
