responsiveweb menu and mobile menu btn click

--- a/c_code/e_jquery/css/src/ex_06_rwd_menu.css
+++ b/c_code/e_jquery/css/src/ex_06_rwd_menu.css
@@ -13,11 +13,26 @@
   h1>a {display: block;width: 100%; height: 100%;}   
   #navBox{float:right; }
 
-@media screen and (max-width:1279px) {
+@media screen and (max-width:1023px) {
   #navBox{ width:60px; height:60px;  margin-top:20px;}
   .menu_btn {position: relative; z-index:500;}
-  .menu_btn, .menu_btn > button{ 
+  .menu_btn, .menu_btn > button{ position: relative;
     width: 100%; height: 100%; background-color: #fa0;}
+
+  .menu_btn i{ 
+    display: block; position: absolute; 
+    top:0; bottom:0; left:0; right:0; margin:auto;
+    border-radius:5px; opacity: 1; transition: all 300ms ease;
+    width: 100%; height:4px; background-color: #333;}
+    /* .line_01{} */
+    .line_02{ transform:translateY(-25px);}
+    .line_03{transform:translateY(25px);}
+
+    .menu_btn.on .line_01{opacity: 0;}
+    .menu_btn.on .line_02{ transform:translateY(0) scaleX(1.3) rotate(50deg);}
+    .menu_btn.on .line_03{ transform:translateY(0) scaleX(1.3) rotate(-50deg);}
+
+    
   .gnb {display: none; position: fixed; top: 0; right: 0; z-index:100;
     width: 100%; height: 100%; background-color: rgba(0,0,0,0.7);
     padding:3rem 2rem; padding-top: 5rem; box-sizing: border-box; 
@@ -26,11 +41,11 @@
   .gnb a {display: block; width: 100%; padding: 0.5rem;}
 }/* @media screen and (max-width:1279px) */
 
-@media screen and (min-width:1280px) {
-  #navBox {width:600px; height:50px; margin-top:40px;  background-color: #fff;}
+@media screen and (min-width:1024px) {
+  #navBox {width:600px; height:50px; margin-top:40px; }
   .menu_btn { display: none; }
   .gnb{ display: block; position: static; }
   .gnb li{ float:left; width:auto; height:100%; margin-left:1rem; border:0; padding: 0;}
   .gnb li:first-child{margin-left: 0;}
-  .gnb li a {padding: 1rem 1.2rem;}
+  .gnb li a {padding: 1rem 1.2rem; background-color: #fff;}
 }/* @media screen and (min-width:1280px) */
