--- a/c_code/e_jquery/css/src/eq_08_moreBtn.css
+++ b/c_code/e_jquery/css/src/eq_08_moreBtn.css
@@ -8,11 +8,12 @@
     border:0.0625rem solid #333; background-color: #fff;}
   .part > ul {width: 100%; height:auto; }
   .part > ul li {
-    width: 100%; height:4.375rem; margin-bottom:1rem; padding:0.5rem; box-sizing:border-box;
-    background-color: #acf;}
+    width: 100%; height:4.375rem; margin-bottom:1rem; padding:0.2rem; box-sizing:border-box;
+    /* background-color: #acf; */ border-bottom:1px dotted #333; }
+  .part .num {float: left; width: 2rem; height:100%; border-right:0.1rem solid #fff; margin-right:0.5rem;}
   .part .image { float: left; width:6rem; height:100%; margin-right:1rem; 
-    background-repeat: no-repeat; background-position: 50% 50%; background-size:cover; background-color: #fa0;}
-  .part dl { width: 100%; height: 100%; padding-top:0.3rem; box-sizing: border-box;}
+    background-repeat: no-repeat; background-position: 50% 50%; background-size:contain; }
+  .part dl { width: 100%; height: 100%; box-sizing: border-box;}
   .part dt { font-size:1.2rem; font-weight: bold; color:#171717; margin-bottom:0.1rem; }
   .part dd { font-size: 1rem; color:#777;}
 
