--- a/c_code/e_jquery/css/src/ex_09_notice.css
+++ b/c_code/e_jquery/css/src/ex_09_notice.css
@@ -27,9 +27,9 @@ h2{ width: 100%; text-align: center; margin-bottom:1rem;}
 .context span {padding-left:0.5rem; border-left: 1px solid #07a; color:#777; }
 
 /* 인디케이터 영역 ------------------------------------------------------------- */
-.indicator {
+.indicator {position: relative;
   width:80%; height:25px; margin:auto; margin-top:2rem; padding:0.2rem; border-radius:40px; background-color: #07a;}
-.indicator ul{width: 100%; height: 100%; text-align: center;}
+.indicator ul{width: 70%; height: 100%; margin:auto; text-align: center;}
 .indicator li{display:inline-block; margin:0 0.2rem; width:50px; height:25px; color:#07a; line-height: 21px;}
 
 .indicator a{display: block; 
@@ -38,3 +38,9 @@ h2{ width: 100%; text-align: center; margin-bottom:1rem;}
 
 .indicator li.action a{font-weight: bold; font-size: 1.1rem; color:#037;}
 
+.more_btn {position:absolute; width:70%; height:0; top:50%; left:15%; }
+.more_btn button{ width:3.125rem; height:1.5625rem; 
+                  transform: translateY(-50%); font-size:0.7rem; 
+                  color:#fff; background-color: #333; border-radius:25px;}
+.next_notice{ float:right;}
+.prev_notice{ float:left;}
