--- a/c_code/e_jquery/css/src/ex_10_zoom.css
+++ b/c_code/e_jquery/css/src/ex_10_zoom.css
@@ -20,16 +20,25 @@ h2{
 .view_area {float:left;
   width:35%; height:500px; background-color: #fdd;}
 .product{
-  width: 100%; height:400px; border:2px solid #0af; margin-bottom:0.5rem;}
+  width: 100%; height:400px; border:2px solid #0af; margin-bottom:0.5rem;
+  background-repeat: no-repeat; background-position: 0 0; background-size: cover;
+}
+
 .view_area ul{ width: 100%; height:auto; text-align: center;}
 .view_area li{
   display:inline-block; width:100px; height:70px; margin:0.2rem; 
   background-color: #aaa; border-radius:0.3rem;}
-.view_area a{display: block; width: 100%; height: 100%;}
+.view_area a{display: block; width: 100%; height: 100%;
+  background-repeat: no-repeat; background-position: 0 0; background-size: cover;}
 
-.scale_area { position: absolute;}
+.scale_area { position: absolute;
+  top:7rem; right:3rem;
+  width:55%; height:650px; background-color: #fff; 
+  border-radius:0.5rem; box-shadow:0 0 0.3rem rgba(0,0,0,0.7);
+  background-repeat: no-repeat; background-position: 0 0; 
+  background-size:300%;}
 
 .narr_area {float:right;
   width:60%; height:700px; 
   box-sizing:border-box; padding:1rem;
-  background-color: #ddf;} 
+  background-color: #ddf;}
