--- a/c_code/e_jquery/css/src/ex_11_mousemove.css
+++ b/c_code/e_jquery/css/src/ex_11_mousemove.css
@@ -5,15 +5,15 @@
   width: 80%; min-width:60rem;
   height:800px; margin:2rem auto;
   background-color: #ddd;
-  border:1px solid #333;
+  /* border:1px solid #333; */
   border-radius:0.5rem;
 }
 
 .character {
-  display: none;
+  /* display: none; */
   position: absolute;
-  /* top: 0; bottom: 0; left: 0; right: 0;
-  margin:auto; cursor: pointer; */
+  top: 0; bottom: 0; left: 0; right: 0;
+  margin:auto; cursor: pointer;
   width:150px; height:150px; 
   background-color: #aff;}
 .character img{width:100%; height:auto;}
