--- a/c_code/e_jquery/css/src/ex_13.landing.css
+++ b/c_code/e_jquery/css/src/ex_13.landing.css
@@ -18,6 +18,12 @@ h1{width: 100%; height: 100%; font-size: 1.2rem; text-align: center;}
   width: 80%; max-width:100rem; min-width:60rem; height:50rem; 
   margin:auto; background-color: #ff5;}
 
+  h2{ 
+    width:300px; height:3rem; margin:auto; background-color: #f5f; text-align: center; color:#fff;
+    opacity: 0; transition:all 300ms ease;
+  }
+  .action > h2 { opacity: 1; }
+
 #footBox{
   width: 100%; height: 15rem; background-color: #555;
 }
