--- a/c_code/e_jquery/css/src/ex_13.landing.css
+++ b/c_code/e_jquery/css/src/ex_13.landing.css
@@ -29,7 +29,9 @@ h1{width: 100%; height: 100%; font-size: 1.2rem; text-align: center;}
   #moreBox.action > h2 { transform:translate(0) rotateX(0) scale(1.5);}
 
   #moreBox.more { background-color: #0ca;}
-  #moreBox.more > h2{left:100%; opacity: 1;}
+  #moreBox.more > h2{ 
+    opacity: 1; position:fixed; top:0; right:0;
+    transform:translate(0) rotateX(0);}
 
 #footBox{
   width: 100%; height: 15rem; background-color: #555;
