--- a/c_code/e_jquery/css/src/ex_13.landing.css
+++ b/c_code/e_jquery/css/src/ex_13.landing.css
@@ -21,7 +21,12 @@ h1{width: 100%; height: 100%; font-size: 1.2rem; text-align: center;}
 }
 #moreBox{
   width: 80%; max-width:100rem; min-width:60rem; height:150rem; 
-  margin:auto; background-color: #ff5;}
+  margin:auto; background-color: #ff5;
+  background-image: url("../../img/zoom/zoom_02_big.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+  background-attachment: fixed;}
 
   h2{ 
     width:300px; height:3rem; margin:auto; background-color: #f5f; text-align: center; color:#fff;
