--- a/c_code/e_jquery/css/src/ex_14_parallax.css
+++ b/c_code/e_jquery/css/src/ex_14_parallax.css
@@ -6,6 +6,7 @@
 #wrap {
   width: 100%; height:auto; min-height:125rem;
   background-color:var(--c-primary);
+  /* background-color: #acf; */
 }
 #headBox{
   position: absolute; top: 0; left: 0; z-index:1500;
@@ -23,8 +24,7 @@ h1{width: 7rem; height:100%; float:left; background-color: #fa0; overflow: hidde
 
 #viewBox{
   position: relative; overflow: hidden; 
-  width: 100%; height:100vh; min-height:31.25rem;
-  background-color: #acf;}
+  width: 100%; height:100vh; min-height:31.25rem;}
 
   #viewBox div{
     position: absolute; left:50%; bottom:0; transform:translateX(-50%);
