--- a/c_code/e_jquery/css/src/ex_15_parallax2.css
+++ b/c_code/e_jquery/css/src/ex_15_parallax2.css
@@ -6,9 +6,10 @@
   background-color: #0184b7;
 }
 
-#headBox{position: relative;
+#headBox{position: fixed; z-index:1500; top: 0; left: 0;
   width: 100%;  height:100vh; min-height:600px;
   background-color: #acf;}
+
 h1{
   z-index:100;
   position: absolute; left: 0; right: 0; top: 0; bottom:0; margin:auto;
@@ -22,12 +23,18 @@ h1 a{
   position: absolute; top: 0; left: 0;  width: 100%; height: 100%; }
 .image_area div {
   position: absolute; top: 0; left: 0;  width: 100%; height: 100%;
-  background-repeat: no-repeat;  background-size: cover;  background-position:50% 50%;}
+  background-repeat: no-repeat;  background-size: cover; }
 
-.front_image{ 
-  z-index:10;  background-image: url("../../img/parallax2/house.png");}
+.front_image{  
+  z-index:10;   background-position:50% 50%; 
+  background-image: url("../../img/parallax2/house.png");}
 .back_image{ 
+  background-position:50% 0; 
   z-index:5;  background-image: url("../../img/parallax2/airplane.png");}
+
+.blink_area {
+  width: 100%; height:3000px; background-color: #0184b7;
+}
 
 #subNavBox{
   width: 100%; max-width:1600px; height:auto; min-height:500px;
