--- a/c_code/e_jquery/css/src/ex_15_parallax2.css
+++ b/c_code/e_jquery/css/src/ex_15_parallax2.css
@@ -8,7 +8,7 @@
 
 #headBox{position: fixed; z-index:1500; top: 0; left: 0;
   width: 100%;  height:100vh; min-height:600px;
-  background-color: #acf;}
+  background-color: #0184b7;}
 
 h1{
   z-index:100;
