--- a/c_code/e_jquery/css/src/ex_16_like_pinterest.css
+++ b/c_code/e_jquery/css/src/ex_16_like_pinterest.css
@@ -12,23 +12,28 @@
 
 #cardBox {
   width: 100%; height:auto;}
+h2{text-align: center;}
+
 #cardBox ul{
-  width:90%; height:auto; margin:auto; background-color: #ddd;}
+  width:90%; height:auto; margin:2rem auto; background-color: #ddd;}
 #cardBox ul:after,
 #cardBox ul::after{
   content:" "; display:block; clear:both; width:100%; height:0;}
 #cardBox li{
     float:left;
-    width:240px; height:480px; 
-    margin-right:20px; margin-bottom:20px;
-    border-radius:0.5rem; background-color: #aaa;
+    width:240px; height:380px; 
+    box-sizing: border-box; padding: 0.5rem;
+    border:1px solid #777;
+    margin-right:20px; margin-bottom:50px;
+    border-radius:0.5rem; background-color: #fff;
     overflow: hidden;}
 
 #cardBox a{ display: block; width: 100%; height: 100%;}
-.img_temp{position: relative; width: 100%; height:430px;}
+.img_temp{position: relative; width: 100%; height:calc(100% - 60px); overflow: hidden; border-radius:0.3rem;}
 .img_temp > img {
   position: absolute; top: 50%; left: 50%;
   width:auto; height:auto; min-width:100%; min-height:100%;
   transform:translate(-50%, -50%);}
 
-#cardBox a > span {display:block; margin-top:0.5rem; width: 90%;}
+#cardBox a > span {display:block; padding-top:0.5rem; width: 90%;
+margin:auto;}
