scroll percent check:

--- a/c_code/e_jquery/css/src/ex_18_like_pinterest2.css
+++ b/c_code/e_jquery/css/src/ex_18_like_pinterest2.css
@@ -29,7 +29,7 @@ h1{
 }
 
 .card_area{
-  width: 100%; height:500px; margin:auto; 
+  width: 100%; height:auto; min-height:500px; margin:auto; 
   background-color: #ffa;
 }
 
